[package]
name = "ReconAIScanner"
version = "0.1.5"
authors = ["Nentropy <nentropy.x@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Scans all nearby wifi networks and the devices connected to each network"
keywords = ["wireless", "wifi", "dot11", "netjson"]
documentation = "https://github.com/nentropy/reconnAIscan.git"
repository = "https://github.com/nentropy/reconnAIscan.git"
readme = "README.md"

[dependencies]
clap = "2.33"
pcap = "0.7.0"
radiotap = "1.3"
bytes = "0.4"
byteorder = "1"
console = "0.9"
env_logger = "0.7"
actix = "0.7"
actix-web = "0.7"
ctrlc = "3.1"
nom = "7.1.3"
crossbeam-channel = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
error-chain = { version = "0.12", default-features = false }
sqlite3 = "0.24.0"
rustscan = "2.3.0"
